--- a/src/style.css
+++ b/src/style.css
@@ -1,48 +1,72 @@
 @font-face {
-    font-family: 'Header Font';
+    font-family: 'HeaderFont';
     src: url(./fonts/Protest_Guerrilla/ProtestGuerrilla-Regular.ttf) format(truetype);
 }
 
-body{
-    display: grid;
+@font-face {
+    font-family: 'ModalFont';
+    src: url(./fonts/Protest_Strike/ProtestStrike-Regular.ttf) format(truetype);
 }
 
-.container1{
+/* Common Properties */
+body,.container1,.container2{
     display: grid;
+    margin: 10px;
+}
+
+
+dialog,button{
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;   
+}
+
+.container1>h1,.container2>div>h2,button{
+    font-family: 'HeaderFont',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    color: #000;
+
+}
+/* Individual Properties */
+
+.container1{
     grid-template-columns: repeat(3,1fr);
     gap: 10px;
-    margin: 10px;
 }
 
 .container1>h1{
     grid-column: 1/4;
     justify-self: center;
-    font-family: 'Header Font',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
 }
 
 .container2{
-    display: grid;
     grid-template-columns: 1fr repeat(2,2fr);
-    margin: 10px;
     gap: 5px;
     justify-items: center;
 }
 
-.container2>div>h2{
-    font-family: 'Header Font',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
-}
 
 button{
-  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   letter-spacing: 2px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
   cursor: pointer;
   border: 3px solid;
   padding: 0.25em 0.5em;
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+}
+
+
+dialog{
+    top: 20%;    
+}
+
+dialog::backdrop{
+    background-color: orange;
+    opacity: .7;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 50vh;
+    font-family: ModalFont,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
