--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'HeaderFont';
-    src: url(./fonts/Protest_Guerrilla/ProtestGuerrilla-Regular.ttf) format(truetype);
+    src: url(../fonts/Protest_Guerrilla/ProtestGuerrilla-Regular.ttf) format(truetype);
 }
 
 @font-face {
     font-family: 'ModalFont';
-    src: url(./fonts/Protest_Strike/ProtestStrike-Regular.ttf) format(truetype);
+    src: url(../fonts/Protest_Strike/ProtestStrike-Regular.ttf) format(truetype);
 }
 
 /* Common Properties */
@@ -69,4 +69,11 @@ form{
     gap: 10px;
     width: 50vh;
     font-family: ModalFont,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#Projects>div{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
 }
