--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,3 +97,24 @@ form{
 #NoteDisplay > button{
     grid-column: 1/3;
 }
+
+.toDo{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px;
+    gap: 20px;
+    cursor: pointer;    
+    border: 2px dotted grey;
+    
+}
+
+#Projects{
+    cursor: pointer;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
